--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -57,6 +57,7 @@
     :focus {
       color: var(--white);
       background: linear-gradient(106.57deg, #ecc243 8.33%, #c6830e 91.69%);
+      border: none;
       svg path {
         stroke: #ffffff;
       }
