--- a/src/assets/scss/layout/_banner.scss
+++ b/src/assets/scss/layout/_banner.scss
@@ -1,7 +1,7 @@
 @use "../config/" as *;
 
 .h-section {
-  background: url("/img/banner-bg.png") center/cover;
+  background: url("/img/banner-bg.webp") center/cover;
   display: grid;
   place-content: center;
   padding-top: 70px;
@@ -180,7 +180,7 @@
 @include mq(md) {
   .hero-section {
     padding-top: 15%;
-    background: url("/img/banner-bg.png") center/cover;
+    background: url("/img/banner-bg.webp") center/cover;
 
     .hero-image {
       picture {
@@ -278,3 +278,4 @@
     }
   }
 }
+
