--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -218,4 +218,8 @@
   #root>div>footer>div.row.m-0.my-5>div.col-md-8.col-12.ps-0>div>ul:nth-child(2)>li:nth-child(3)>a {
     line-height: 14px;
   }
+
+  .blogs-page .footer .footer-link-title {
+    color: #fff;
+  }
 }
