--- a/src/assets/scss/layout/_feature.scss
+++ b/src/assets/scss/layout/_feature.scss
@@ -239,6 +239,7 @@
 @media (max-width: 991px) {
   .feature-section-class .card-icon {
     padding: 10px;
+    border-radius: 8px;
 
     // img {
     //   max-width: 25px;
