--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -175,7 +175,7 @@
 
   .footer.footer_new .footer-top-new {
     grid-template-columns: repeat(2, auto);
-    gap: 25px 15px;
+    gap: 25px;
   }
 
 
