--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -206,6 +206,14 @@
       font-weight: 500;
     }
   }
+  .product-math-verse {
+    .section-sub-title {
+      text-transform: uppercase;
+      letter-spacing: 0.9rem;
+      word-spacing: 0.5rem;
+      font-weight: 500;
+    }
+  }
 
   .product-banner {
     // margin-bottom: 5.4rem;
