--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -45,6 +45,7 @@
     padding-left: 1rem;
     margin-top: 0.2rem;
     color: #00a700;
+    width: 100%;
     &:empty {
       display: none;
     }
