--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -580,6 +580,10 @@ p.pagePara {
       border-radius: 20px;
       padding: 25px;
 
+      &:last-child {
+        border: none;
+      }
+
       h4 {
         font-family: Gilroy-SemiBold;
         font-size: 18px;
@@ -1460,11 +1464,14 @@ header .explore-tray {
   }
 }
 
-.btn.bg-transparent:hover,
-.btn.bg-transparent:focus,
 .btn.bg-transparent {
   background: transparent;
   color: #292D32 !important;
+
+  &:hover{
+    background: #292D32 !important;
+    color: #fff !important;
+  }
 }
 
 .applicationProcessGrid {
@@ -2119,6 +2126,7 @@ header .explore-tray {
     padding: 25px;
     border: 1px solid #D1D1D1;
     background: #FFFFFF;
+    border-radius: 20px;
 
     .head {
       h3 {
@@ -2133,6 +2141,11 @@ header .explore-tray {
     form {
       label {
         display: none;
+      }
+
+      input {
+        color: #000;
+        font-family: Gilroy-Medium;
       }
     }
 
@@ -2317,6 +2330,7 @@ header .explore-tray {
   background: #D9D9D9;
   border: none;
   color: #000;
+  cursor: default;
 
   &:focus,
   &:hover {
@@ -2968,7 +2982,7 @@ header .explore-tray {
     }
   }
 
-  .labSetUpOptions{
+  .labSetUpOptions {
     padding-bottom: 20px;
   }
 
