--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -40,12 +40,15 @@
     padding-left: 1rem;
     margin-top: 0.2rem;
   }
+
   &-success {
     font-size: 1.3rem;
     padding-left: 1rem;
     margin-top: 0.2rem;
     color: #00a700;
     width: 100%;
+    font-family: Gilroy-Medium;
+
     &:empty {
       display: none;
     }
