--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -2598,6 +2598,10 @@ header .explore-tray {
     }
   }
 
+  .pageInternalSectionMain{
+    padding-bottom: 15px;
+  }
+
   .pageInternalSectionMain .tabs-container-item .price-wrap h3 {
     margin: 0;
   }
